// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`css > it then NOT minifies css with default options 1`] = `
{
  "output": [
    {
      "fileName": "style.css",
      "name": "style.css",
      "needsCodeReference": false,
      "source": "/*! foo */ body { background-color: #ff0000; } /* bar */ h1 { color: crimson; font-size: 28px; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >/*! foo */ body { background-color: #ff0000; } /* bar */ h1 { color: crimson; font-size: 28px; }</style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`css > it then minifies css with optimizeCss enabled 1`] = `
{
  "output": [
    {
      "fileName": "style.css",
      "name": "style.css",
      "needsCodeReference": false,
      "source": "/*! foo */ body { background-color: #ff0000; } /* bar */ h1 { color: crimson; font-size: 28px; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >/*! foo */
body{background-color:red}h1{color:#dc143c;font-size:28px}</style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`css > it then minifies css with optimizeCss enabled, respecting cssoOptions 1`] = `
{
  "output": [
    {
      "fileName": "style.css",
      "name": "style.css",
      "needsCodeReference": false,
      "source": "/*! foo */ body { background-color: #ff0000; } /* bar */ h1 { color: crimson; font-size: 28px; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >body{background-color:red}h1{color:#dc143c;font-size:28px}</style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`custom replaceTags 1`] = `
{
  "output": [
    {
      "fileName": "abc.html",
      "name": "abc.html",
      "needsCodeReference": false,
      "source": "<div></div>",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><div></div></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`handles custom attribute and defaults to 'inline-source' 1`] = `
{
  "output": [
    {
      "fileName": "style.css",
      "name": "style.css",
      "needsCodeReference": false,
      "source": "body { background-color: red; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
            custom-inline-attribute i-should-be-preserved  
          >body { background-color: red; }</style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it then doesn't mess with tags it shouldn't mess with 1`] = `
{
  "output": [
    {
      "fileName": "style.css",
      "name": "style.css",
      "needsCodeReference": false,
      "source": "body { background-color: red; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >body { background-color: red; }</style><img src="lalala.png"/></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it then inlines css and preserves style tags 1`] = `
{
  "output": [
    {
      "fileName": "style.css",
      "name": "style.css",
      "needsCodeReference": false,
      "source": "body { background-color: red; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >body { background-color: red; }</style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it then inlines svg 1`] = `
{
  "output": [
    {
      "fileName": "i-am-an-svg.svg",
      "name": "i-am-an-svg.svg",
      "needsCodeReference": false,
      "source": "<svg viewBox="0 0 100 100"><rect width="100" height="100"/></svg>",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><svg  i-should-be-preserved   viewBox="0 0 100 100"><rect width="100" height="100"/></svg></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it then optimizes svg with custom options 1`] = `
{
  "output": [
    {
      "fileName": "i-am-an-svg.svg",
      "name": "i-am-an-svg.svg",
      "needsCodeReference": false,
      "source": "<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd"><svg viewBox="0 0 100 100"><title>hello</title><rect width="100" height="100"/></svg>",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><svg  i-should-be-preserved   viewBox="0 0 100 100"><title>hello</title><path d="M0 0h100v100H0z"/></svg></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it then optimizes svg with default options 1`] = `
{
  "output": [
    {
      "fileName": "i-am-an-svg.svg",
      "name": "i-am-an-svg.svg",
      "needsCodeReference": false,
      "source": "<svg viewBox="0 0 100 100"><rect width="100" height="100"/></svg>",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><svg  i-should-be-preserved   viewBox="0 0 100 100"><path d="M0 0h100v100H0z"/></svg></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`it works without any options 1`] = `
{
  "output": [
    {
      "fileName": "style.css",
      "name": "style.css",
      "needsCodeReference": false,
      "source": "body { background-color: red; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >body { background-color: red; }</style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`js > it then NOT minifies js with default options 1`] = `
{
  "output": [
    {
      "fileName": "script.js",
      "name": "script.js",
      "needsCodeReference": false,
      "source": "/* foo */ const u = undefined;const foo = 123;const bar = 256;const baz = typeof u !== "undefined" ? foo : bar;",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><script
             i-should-be-preserved  
          >/* foo */ const u = undefined;const foo = 123;const bar = 256;const baz = typeof u !== "undefined" ? foo : bar;</script></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`js > it then minifies js with optimizeJs enabled 1`] = `
{
  "output": [
    {
      "fileName": "script.js",
      "name": "script.js",
      "needsCodeReference": false,
      "source": "/* foo */ const u = undefined;const foo = 123;const bar = 256;const baz = typeof u !== "undefined" ? foo : bar;",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><script
             i-should-be-preserved  
          >const u=void 0,foo=123,bar=256,baz=256;</script></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`js > it then minifies js with optimizeJs enabled, respecting terserOptions 1`] = `
{
  "output": [
    {
      "fileName": "script.js",
      "name": "script.js",
      "needsCodeReference": false,
      "source": "/* foo */ const u = undefined;const foo = 123;const bar = 256;const baz = typeof u !== "undefined" ? foo : bar;",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><script
             i-should-be-preserved  
          >const u=void 0;const foo=123;const bar=256;const baz=256;</script></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`scss > it NOT compile scss with default options 1`] = `
{
  "output": [
    {
      "fileName": "style.scss",
      "name": "style.scss",
      "needsCodeReference": false,
      "source": "$color: #ff0000; /*! foo */ body { background-color: $color; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >$color: #ff0000; /*! foo */ body { background-color: $color; }</style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`scss > it compile scss and minify it when compileScss and optimizeCss options enabled 1`] = `
{
  "output": [
    {
      "fileName": "style.scss",
      "name": "style.scss",
      "needsCodeReference": false,
      "source": "$color: #ff0000; /*! foo */ body { background-color: $color; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >/*! foo */
body{background-color:red}</style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`scss > it compile scss and minify it when compileScss and optimizeCss options enabled; with empty content 1`] = `
{
  "output": [
    {
      "fileName": "style.scss",
      "name": "style.scss",
      "needsCodeReference": false,
      "source": "$foo: 0;",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          ></style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`scss > it compile scss when compileScss option enabled 1`] = `
{
  "output": [
    {
      "fileName": "style.scss",
      "name": "style.scss",
      "needsCodeReference": false,
      "source": "$color: #ff0000; /*! foo */ body { background-color: $color; }",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><style
             i-should-be-preserved  
          >/*! foo */
body {
  background-color: #ff0000;
}</style></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`ts > compiles ts by default 1`] = `
{
  "output": [
    {
      "fileName": "script.ts",
      "name": "script.ts",
      "needsCodeReference": false,
      "source": "/* foo */ const u = undefined;const foo: number = 123;const bar: number = 256;const baz = typeof u !== "undefined" ? foo : bar;",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><script
             i-should-be-preserved  
          >const u = void 0;
const foo = 123;
const bar = 256;
const baz = typeof u !== "undefined" ? foo : bar;
</script></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`ts > does not compile ts when compileTs option is disabled 1`] = `
{
  "output": [
    {
      "fileName": "script.ts",
      "name": "script.ts",
      "needsCodeReference": false,
      "source": "/* foo */ const u = undefined;const foo: number = 123;const bar: number = 256;const baz = typeof u !== "undefined" ? foo : bar;",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><script
             i-should-be-preserved  
          >/* foo */ const u = undefined;const foo: number = 123;const bar: number = 256;const baz = typeof u !== "undefined" ? foo : bar;</script></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`ts > does not minify compiled ts by default 1`] = `
{
  "output": [
    {
      "fileName": "script.ts",
      "name": "script.ts",
      "needsCodeReference": false,
      "source": "/* foo */ const u = undefined;const foo: number = 123;const bar: number = 256;const baz = typeof u !== "undefined" ? foo : bar;",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><script
             i-should-be-preserved  
          >const u = void 0;
const foo = 123;
const bar = 256;
const baz = typeof u !== "undefined" ? foo : bar;
</script></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`ts > does not minify compiled ts when optimizeJs option is disabled 1`] = `
{
  "output": [
    {
      "fileName": "script.ts",
      "name": "script.ts",
      "needsCodeReference": false,
      "source": "/* foo */ const u = undefined;const foo: number = 123;const bar: number = 256;const baz = typeof u !== "undefined" ? foo : bar;",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><script
             i-should-be-preserved  
          >const u = void 0;
const foo = 123;
const bar = 256;
const baz = typeof u !== "undefined" ? foo : bar;
</script></html>",
      "type": "asset",
    },
  ],
}
`;

exports[`ts > minifies compiled ts when optimizeJs option is enabled, respecting terserOptions 1`] = `
{
  "output": [
    {
      "fileName": "script.ts",
      "name": "script.ts",
      "needsCodeReference": false,
      "source": "/* foo */ const u = undefined;const foo: number = 123;const bar: number = 256;const baz = typeof u !== "undefined" ? foo : bar;",
      "type": "asset",
    },
    {
      "fileName": "index.html",
      "name": undefined,
      "needsCodeReference": false,
      "source": "<html><script
             i-should-be-preserved  
          >const u=void 0;const foo=123;const bar=256;const baz=256;</script></html>",
      "type": "asset",
    },
  ],
}
`;
